message Request {
    required bytes peerId = 1;
}